[package]
name = "sctys_rust_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sctys_proxy = {path = "../sctys_proxy"}
aws-config = "0.54"
aws-sdk-s3 = "0.24"
aws-smithy-http = "0.54"
byte-unit = "4.0.18"
bzip2 = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
duckdb = {version = "0.9", features = ["bundled"]}
flate2 = "1"
futures = "0.3"
itertools = "0.10"
log = "0.4"
log4rs = {version = "1.2.0", features = ["gzip"]}
polars = {version = "0.35", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "streaming"]}
rand = "0.8.5"
reqwest = {version = "0.11", features = ["blocking", "json", "native-tls"]}
scraper = "0.14.0"
serde = "1.0.193"
serde_derive = "1.0.193"
slack-rust = "0.0.1-alpha"
tar = "0.4"
thirtyfour = "0.31"
thirtyfour_sync = "0.27.1"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
tqdm = "0.4"