[package]
name = "sctys_rust_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "1.6"
aws-credential-types = "1.2"
aws-sdk-apigateway = "1.68"
aws-sdk-s3 = "1.84"
aws-smithy-runtime-api = "1.8"
aws-sdk-ssm = "1.90"
byte-unit = "4.0.18"
bzip2 = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
clickhouse = {version = "0.13", features = ["inserter"]}
duckdb = {version = "1.2", features = ["bundled", "parquet"]}
flate2 = "1"
futures = "0.3"
fxhash = "0.2"
itertools = "0.10"
log = "0.4"
log4rs = {version = "1.2.0", features = ["gzip"]}
playwright-rust = { path = "../playwright-rust" }
polars = {version = "0.45", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "streaming"]}
mongodb = "3.2"
rand = {version = "0.8.5", features = ["std"]}
redis = "1.0"
reqwest = {version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots", "gzip", "cookies"]}
rquest = {version ="5", features = ["cookies"]}
rquest-util = "2"
scraper = "0.14.0"
sea-query = "0.32"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
tar = "0.4"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
tqdm = "0.4"
walkdir = "2.4"

